--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,8 @@ body,
   font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas,
                "Liberation Mono", "Courier New", monospace;
 }
-
+html,
 body {
   min-width: 320px;
+  overflow-x: hidden;
 }
